2011-07-28	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1859/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_barrier_init and pthread_barrier_destroy.
	* psxtmbarrier01/.cvsignore, psxtmbarrier01/Makefile.am,
	psxtmbarrier01/init.c, psxtmbarrier01/psxtmbarrier01.doc: New files.

2011-07-26	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1852/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	sem_wait - not available, block.
	* psxtmsem03/.cvsignore, psxtmsem03/Makefile.am, psxtmsem03/init.c,
	psxtmsem03/psxtmsem03.doc: New files.

2011-07-26	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1850/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	sem_post - thread waiting, preempt.
	* psxtmsem05/.cvsignore, psxtmsem05/Makefile.am, psxtmsem05/init.c,
	psxtmsem05/psxtmsem05.doc: New files.

2011-07-26	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1849/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	sem_post - thread waiting, no preempt.
	* psxtmsem04/.cvsignore, psxtmsem04/Makefile.am, psxtmsem04/init.c,
	psxtmsem04/psxtmsem04.doc: New files.

2011-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmthread03/psxtmthread03.doc: Fix.

2011-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmmutex02/psxtmmutex02.doc, psxtmsem01/psxtmsem01.doc,
	psxtmsem02/psxtmsem02.doc, psxtmthread01/psxtmthread01.doc: Ensure
	all are correct.

2011-07-22	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1847/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	various non-blocking semaphore operations.
	* psxtmsem02/.cvsignore, psxtmsem02/Makefile.am, psxtmsem02/init.c,
	psxtmsem02/psxtmsem02.doc: New files.

2011-07-22	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1846/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	various sem_open(), sem_close(), sem_unlink(), sem_init(), and
	sem_destroy() cases.