@@ -52,7 +52,7 @@
 ,,,
 "pthread_barrier_init","psxtmbarrier01","psxtmtest_init_destroy","Yes"
 "pthread_barrier_destroy","psxtmbarrier01","psxtmtest_init_destroy","Yes"
-"pthread_barrier_wait - blocking","psxtmbarrier02","psxtmtest_blocking",
+"pthread_barrier_wait - blocking","psxtmbarrier02","psxtmtest_blocking","Yes"
 "pthread_barrier_wait - releasing, no preempt","psxtmbarrier03","psxtmtest_unblocking_nopreempt",
 "pthread_barrier_wait - releasing, preempt","psxtmbarrier04","psxtmtest_unblocking_preempt",
 ,,,
